@@ -14,8 +14,6 @@ import eu.exeris.kernel.core.memory.WatermarkManager;
 import eu.exeris.kernel.core.transport.scheduler.AdmissionController;
 import eu.exeris.kernel.core.transport.scheduler.PaqsScheduler;
 import eu.exeris.kernel.core.transport.scheduler.StreamLoadShedder;
-import eu.exeris.kernel.core.transport.syscall.CoreSyscallLoader;
-import eu.exeris.kernel.core.transport.syscall.SyscallHandles;
 import eu.exeris.kernel.spi.crypto.CryptoProviderConfig;
 import eu.exeris.kernel.spi.crypto.KernelCryptoProvider;
 import eu.exeris.kernel.spi.crypto.TlsEngine;
@@ -30,33 +28,20 @@ import eu.exeris.kernel.spi.transport.TransportConnection;
 import eu.exeris.kernel.spi.transport.TransportEngine;
 import eu.exeris.kernel.spi.transport.TransportMode;
 import eu.exeris.kernel.spi.transport.TransportStats;
-import org.jctools.queues.MpscUnboundedArrayQueue;
-
 import java.io.IOException;
-import java.lang.foreign.Arena;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ValueLayout;
-import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.nio.channels.AsynchronousCloseException;
-import java.nio.channels.CancelledKeyException;
 import java.nio.channels.SelectionKey;
 import java.nio.channels.Selector;
 import java.nio.channels.ServerSocketChannel;
 import java.nio.channels.SocketChannel;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Locale;
 import java.util.Objects;
-import java.util.Queue;
-import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.concurrent.locks.LockSupport;
 
 /**
  * Community native TCP carrier with FD-owner reactor and VT-per-stream dispatch via PAQS.
@@ -72,7 +57,6 @@ import java.util.concurrent.locks.LockSupport;
     "PMD.ExceptionAsFlowControl",
     "PMD.AvoidCatchingGenericException",
     "PMD.CloseResource",
-    "PMD.CognitiveComplexity",
     "PMD.LawOfDemeter",
     "PMD.AvoidInstantiatingObjectsInLoops"
 })
@@ -80,29 +64,6 @@ public final class NativeTcpCarrier implements TransportEngine {
 
     private static final System.Logger LOG = System.getLogger(NativeTcpCarrier.class.getName());
     private static final String ENGINE_NAME = "CommunityNativeTcpCarrier";
-    private static final String SOCKET_BACKEND_PROPERTY = "exeris.community.transport.socket.backend";
-    private static final String SOCKET_BACKEND_ENV = "EXERIS_COMMUNITY_TRANSPORT_SOCKET_BACKEND";
-    private static final String SOCKET_BACKEND_ENV_ALIAS = "SOCKET_BACKEND_ENV";
-    private static final String SOCKET_BACKEND_AUTO = "auto";
-    private static final String SOCKET_BACKEND_NIO = "nio";
-    private static final String SOCKET_BACKEND_POSIX_HYBRID = "posix-hybrid";
-    private static final String ACTIVE_NIO_FALLBACK_DETAIL = "continuing on the active NIO fallback.";
-    private static final String LOOPBACK_HOST = InetAddress.getLoopbackAddress().getHostAddress();
-    private static final byte LOOPBACK_FIRST_OCTET = 127;
-    private static final byte LOOPBACK_SECOND_OCTET = 0;
-    private static final byte LOOPBACK_THIRD_OCTET = 0;
-    private static final byte LOOPBACK_FOURTH_OCTET = 1;
-    private static final int AF_INET = 2;
-    private static final int SOCK_STREAM = 1;
-    private static final int DEFAULT_IP_PROTOCOL = 0;
-    private static final int SOCKADDR_IN_SIZE = 16;
-    private static final boolean SOCKADDR_INCLUDES_LENGTH = usesBsdSockaddrLayout();
-    private static final boolean IS_WINDOWS_RUNTIME =
-            System.getProperty("os.name", "").toLowerCase(Locale.ROOT).startsWith("windows");
-    private static final long CLIENT_TLS_INGRESS_IDLE_BACKOFF_INITIAL_NANOS = 250_000L;
-    private static final long CLIENT_TLS_INGRESS_IDLE_BACKOFF_MAX_NANOS = 2_000_000L;
-    private static final long CLIENT_WRITER_BACKOFF_INITIAL_NANOS = 250_000L;
-    private static final long CLIENT_WRITER_BACKOFF_MAX_NANOS = 2_000_000L;
     private static final int MIN_LISTENER_BACKLOG = 64;
     private static final int MAX_LISTENER_BACKLOG = 1_024;
 
@@ -110,17 +71,10 @@ public final class NativeTcpCarrier implements TransportEngine {
     private final MemoryAllocator allocator;
     private final KernelCryptoProvider cryptoProvider;
     private final CryptoProviderConfig cryptoConfig;
-    private final SocketBackendMode requestedSocketBackend;
-    private final Arena socketBackendArena;
-    private final SyscallHandles socketHandles;
-    private final boolean ffmSocketBackendArmed;
+    private final NativeTcpSocketBackend backend;
 
     private final AtomicBoolean running = new AtomicBoolean(false);
     private final AtomicBoolean closed = new AtomicBoolean(false);
-    private final AtomicBoolean serverSocketValidationAttempted = new AtomicBoolean(false);
-    private final AtomicBoolean serverSocketValidationSuccessful = new AtomicBoolean(false);
-    private final AtomicBoolean clientSocketValidationAttempted = new AtomicBoolean(false);
-    private final AtomicBoolean clientSocketValidationSuccessful = new AtomicBoolean(false);
 
     private final AtomicLong streamSeq = new AtomicLong(1);
     private final AtomicLong connectionSeq = new AtomicLong(1);
@@ -135,7 +89,7 @@ public final class NativeTcpCarrier implements TransportEngine {
     private volatile ServerSocketChannel serverChannel;
     private volatile Thread acceptorThread;
     private volatile PaqsScheduler paqs;
-    private final List<ReactorLoop> reactors = new ArrayList<>();
+    private final List<NativeTcpReactor> reactors = new ArrayList<>();
     private final AtomicInteger nextReactorIndex = new AtomicInteger(0);
 
     private final ChannelRuntimeRegistry channelRuntimeRegistry = new ChannelRuntimeRegistry();
@@ -147,7 +101,7 @@ public final class NativeTcpCarrier implements TransportEngine {
             channelRuntimeRegistry.runtimeByChannel;
     private final ConcurrentMap<SocketChannel, NativeTcpStream> streamByChannel =
             channelRuntimeRegistry.streamByChannel;
-    private final ConcurrentMap<SocketChannel, ReactorLoop> channelOwner =
+    private final ConcurrentMap<SocketChannel, NativeTcpReactor> channelOwner =
             channelRuntimeRegistry.channelOwner;
 
     /* default */ NativeTcpCarrier(TransportConfig config,
@@ -158,17 +112,13 @@ public final class NativeTcpCarrier implements TransportEngine {
         this.allocator = Objects.requireNonNull(allocator, "allocator must not be null");
         this.cryptoProvider = cryptoProvider;
         this.cryptoConfig = cryptoConfig;
-        SocketBackendSelection backendSelection = SocketBackendSelection.resolve();
-        this.requestedSocketBackend = backendSelection.requestedMode();
-        this.socketBackendArena = backendSelection.socketBackendArena();
-        this.socketHandles = backendSelection.socketHandles();
-        this.ffmSocketBackendArmed = backendSelection.ffmSocketBackendArmed();
+        this.backend = new NativeTcpSocketBackend();
         LOG.log(System.Logger.Level.INFO, () ->
                 "[NativeTcpCarrier] Community socket backend mode="
-                        + backendSelection.requestedMode().configValue()
-                        + ", active=" + activeSocketBackend()
-                        + ", ffmArmed=" + backendSelection.ffmSocketBackendArmed()
-                        + " - " + backendSelection.detail());
+                        + backend.requestedSocketBackend()
+                        + ", active=" + backend.activeSocketBackend()
+                        + ", ffmArmed=" + backend.isFfmSocketBackendArmed()
+                        + " - " + backend.detail());
     }
 
     @Override
@@ -203,6 +153,11 @@ public final class NativeTcpCarrier implements TransportEngine {
                 }
                 initPaqs();
                 startServerRuntime();
+            } else {
+                // CLIENT mode: there is no acceptor/PAQS, but outbound channels still need a reactor
+                // to drive non-blocking ingress and egress (TCK-064). Stand up the reactor loop(s)
+                // here so connect() can register channels against them.
+                startClientRuntime();
             }
         } catch (RuntimeException ex) {
             running.set(false);
@@ -227,10 +182,10 @@ public final class NativeTcpCarrier implements TransportEngine {
             }
         }
 
-        for (ReactorLoop reactor : reactors) {
+        for (NativeTcpReactor reactor : reactors) {
             reactor.wakeup();
         }
-        for (ReactorLoop reactor : reactors) {
+        for (NativeTcpReactor reactor : reactors) {
             reactor.join(2_000L);
         }
 
@@ -254,15 +209,18 @@ public final class NativeTcpCarrier implements TransportEngine {
         SocketChannel channel = null;
         TlsEngine tlsEngine = null;
         try {
-            validateClientSocketBackendOnce(host, port);
+            backend.validateClientSocketBackendOnce(allocator, host, port);
             channel = SocketChannel.open();
+            // Connect blocking (avoids OP_CONNECT handling), then flip the connected channel to
+            // non-blocking UNCONDITIONALLY before reactor registration. This is the TCK-064 root
+            // cause fix: a blocking plain client FD makes seamRead's EAGAIN->0 path unreachable, so
+            // native recv() blocks and pins the VT carrier. Non-blocking recv yields cleanly to the
+            // reactor instead. TLS-FD channels were already flipped here; plain channels now are too.
             channel.configureBlocking(true);
             channel.connect(new InetSocketAddress(host, port));
+            channel.configureBlocking(false);
             tlsEngine = createTlsEngineIfEnabled();
             bindTlsFdIfRequired(tlsEngine, channel);
-            if (tlsEngine instanceof eu.exeris.kernel.community.crypto.CommunityTlsEngine) {
-                channel.configureBlocking(false);
-            }
             final SocketChannel connectedChannel = channel;
 
             NativeTcpConnection connection = new NativeTcpConnection(
@@ -277,17 +235,16 @@ public final class NativeTcpCarrier implements TransportEngine {
                     connection,
                     allocator,
                     tlsEngine,
-                    () -> requestClientWriteFlush(connectedChannel),
+                    () -> requestWriteInterest(connectedChannel),
                     () -> onStreamClosed(connectedChannel),
-                    socketHandles);
+                    backend.socketHandles());
             if (tlsEngine instanceof eu.exeris.kernel.community.crypto.CommunityTlsEngine) {
                 stream.markTlsBoundFromCarrier();
             }
 
             connection.bindSingleStream(stream);
             ChannelRuntimeRegistry.ChannelRuntimeState runtime = registerRuntime(stream, connectedChannel);
-            startClientIngressPump(runtime);
-            startClientWriterPump(runtime);
+            registerClientChannel(runtime, connectedChannel);
             activeConnections.incrementAndGet();
             activeStreams.incrementAndGet();
             totalAccepted.incrementAndGet();
@@ -338,52 +295,35 @@ public final class NativeTcpCarrier implements TransportEngine {
         if (!closed.compareAndSet(false, true)) {
             return;
         }
-        Arena arena = socketBackendArena;
-        try (arena) {
-            try {
-                stop();
-            } finally {
-                bestEffortWsaCleanup(socketHandles);
-            }
+        try {
+            stop();
+        } finally {
+            backend.close();
         }
     }
 
-    private static void bestEffortWsaCleanup(SyscallHandles handles) {
-        if (handles == null || !handles.hasWsaCleanup()) {
-            return;
-        }
-        try {
-            handles.wsaCleanup().invokeExact();
-        } catch (Throwable _) {
-            // best effort
-        }
+    /* default */ boolean isRunning() {
+        return running.get();
     }
 
     /* default */ String requestedSocketBackend() {
-        return requestedSocketBackend.configValue();
+        return backend.requestedSocketBackend();
     }
 
     /* default */ String activeSocketBackend() {
-        if (requestedSocketBackend == SocketBackendMode.NIO) {
-            return SOCKET_BACKEND_NIO;
-        }
-        return isPosixHybridBackendActive() ? SOCKET_BACKEND_POSIX_HYBRID : SOCKET_BACKEND_NIO;
-    }
-
-    private boolean isPosixHybridBackendActive() {
-        return ffmSocketBackendArmed;
+        return backend.activeSocketBackend();
     }
 
     /* default */ boolean isFfmSocketBackendArmed() {
-        return ffmSocketBackendArmed;
+        return backend.isFfmSocketBackendArmed();
     }
 
     /* default */ boolean isServerSocketValidationSuccessful() {
-        return serverSocketValidationSuccessful.get();
+        return backend.isServerSocketValidationSuccessful();
     }
 
     /* default */ boolean isClientSocketValidationSuccessful() {
-        return clientSocketValidationSuccessful.get();
+        return backend.isClientSocketValidationSuccessful();
     }
 
     /* default */ int listenerBacklog() {
@@ -410,27 +350,47 @@ public final class NativeTcpCarrier implements TransportEngine {
                 engineName());
     }
 
+    /**
+     * Builds and starts {@code reactorCount} reactor loops, replacing any prior set.
+     * Shared by SERVER/DUAL bootstrap and CLIENT bootstrap so both roles drive the same
+     * non-blocking selector model.
+     */
+    private void startReactors(int reactorCount) throws IOException {
+        reactors.clear();
+        for (int i = 0; i < reactorCount; i++) {
+            reactors.add(new NativeTcpReactor(this, i, Selector.open()));
+        }
+        nextReactorIndex.set(0);
+        for (NativeTcpReactor reactor : reactors) {
+            reactor.start();
+        }
+    }
+
     private void startServerRuntime() {
         try {
-            validateServerSocketBootstrapOnce();
-            int reactorCount = Math.max(1, config.reactorCount());
-            reactors.clear();
-            for (int i = 0; i < reactorCount; i++) {
-                reactors.add(new ReactorLoop(i, Selector.open()));
-            }
-            nextReactorIndex.set(0);
+            backend.validateServerSocketBootstrapOnce(allocator);
 
             serverChannel = ServerSocketChannel.open();
             serverChannel.configureBlocking(true);
             serverChannel.bind(new InetSocketAddress(config.bindAddress(), config.port()), listenerBacklog());
 
-            for (ReactorLoop reactor : reactors) {
-                reactor.start();
-            }
+            startReactors(Math.max(1, config.reactorCount()));
 
             acceptorThread = Thread.ofPlatform()
                     .name("carrier/native-tcp/acceptor")
                     .start(this::runAcceptorLoop);
+        } catch (IOException e) {
+            throw TransportException.engineStartFailure(engineName(), config.port(), e);
+        }
+    }
+
+    private void startClientRuntime() {
+        try {
+            // CLIENT/DUAL outbound paths multiplex a small number of channels; a single reactor
+            // is sufficient and intentionally avoids spawning surplus reactor platform threads.
+            // Surplus client reactors would oversubscribe constrained cores (2-vCPU CI) and starve
+            // the VT carriers running stream handlers — the same class of stall TCK-064 fixes.
+            startReactors(1);
         } catch (IOException e) {
             throw TransportException.engineStartFailure(engineName(), config.port(), e);
         }
@@ -452,10 +412,10 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
     }
 
-    private void handleAsyncFailure(String stage, Exception error) {
+    /* default */ void handleAsyncFailure(String stage, Exception error) {
         boolean wasRunning = running.getAndSet(false);
         closeQuietly(serverChannel);
-        for (ReactorLoop reactor : reactors) {
+        for (NativeTcpReactor reactor : reactors) {
             reactor.wakeup();
         }
         if (wasRunning) {
@@ -476,7 +436,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
     }
 
-    private void closeKeyStream(SelectionKey key) {
+    /* default */ void closeKeyStream(SelectionKey key) {
         if (!(key.channel() instanceof SocketChannel channel)) {
             return;
         }
@@ -542,7 +502,7 @@ public final class NativeTcpCarrier implements TransportEngine {
                 tlsEngine,
                 () -> requestWriteInterest(channel),
                 () -> onStreamClosed(channel),
-                socketHandles);
+                backend.socketHandles());
         if (tlsEngine instanceof eu.exeris.kernel.community.crypto.CommunityTlsEngine) {
             stream.markTlsBoundFromCarrier();
         }
@@ -557,7 +517,7 @@ public final class NativeTcpCarrier implements TransportEngine {
                                                    NativeTcpStream stream,
                                                    SocketChannel currentChannel) {
         ChannelRuntimeRegistry.ChannelRuntimeState runtime = registerRuntime(stream, currentChannel);
-        ReactorLoop owner = selectReactor();
+        NativeTcpReactor owner = selectReactor();
         runtime.markRegistrationPending();
         runtime.bindOwner(owner);
         owner.enqueueRegistration(currentChannel);
@@ -587,7 +547,25 @@ public final class NativeTcpCarrier implements TransportEngine {
         return true;
     }
 
-    private ReactorLoop selectReactor() {
+    /**
+     * Registers an outbound (client) channel with a reactor exactly like an accepted server
+     * channel: bind the owner, mark registration pending, and enqueue the REGISTER request so the
+     * reactor arms OP_READ (and OP_WRITE when there is already-queued data) on its own thread. This
+     * is the TCK-064 fix — client ingress is now reactor-driven against a non-blocking FD instead of
+     * a blocking native {@code recv()} on a VT (which pinned the carrier). Egress is unified onto the
+     * same key via {@link #requestWriteInterest}: the stream's write callback arms OP_WRITE and the
+     * reactor thread runs {@link #flushStream}. No separate ingress/writer VT survives for either
+     * plain or TLS-FD client channels.
+     */
+    private void registerClientChannel(ChannelRuntimeRegistry.ChannelRuntimeState runtime,
+                                       SocketChannel channel) {
+        NativeTcpReactor owner = selectReactor();
+        runtime.markRegistrationPending();
+        runtime.bindOwner(owner);
+        owner.enqueueRegistration(channel);
+    }
+
+    private NativeTcpReactor selectReactor() {
         int size = reactors.size();
         if (size == 0) {
             throw new IllegalStateException("No reactor loops initialized");
@@ -605,11 +583,11 @@ public final class NativeTcpCarrier implements TransportEngine {
         return channelRuntimeRegistry.resolveRuntime(channel);
     }
 
-    private NativeTcpStream resolveStream(SocketChannel channel) {
+    /* default */ NativeTcpStream resolveStream(SocketChannel channel) {
         return channelRuntimeRegistry.resolveStream(channel);
     }
 
-    private void readIngress(SocketChannel channel) {
+    /* default */ void readIngress(SocketChannel channel) {
         NativeTcpStream stream = resolveStream(channel);
         if (stream == null) {
             return;
@@ -653,7 +631,7 @@ public final class NativeTcpCarrier implements TransportEngine {
         return stream.decryptIngress(slab, read);
     }
 
-    private void flushStream(SocketChannel channel, SelectionKey key) {
+    /* default */ void flushStream(SocketChannel channel, SelectionKey key) {
         NativeTcpStream stream = resolveStream(channel);
         if (stream == null) {
             key.interestOps(SelectionKey.OP_READ);
@@ -669,7 +647,7 @@ public final class NativeTcpCarrier implements TransportEngine {
 
     private void requestWriteInterest(SocketChannel channel) {
         ChannelRuntimeRegistry.ChannelRuntimeState runtime = resolveRuntime(channel);
-        ReactorLoop owner = runtime != null ? runtime.owner() : channelOwner.get(channel);
+        NativeTcpReactor owner = runtime != null ? runtime.owner() : channelOwner.get(channel);
         if (owner == null) {
             return;
         }
@@ -679,7 +657,7 @@ public final class NativeTcpCarrier implements TransportEngine {
     private void onStreamClosed(SocketChannel channel) {
         ChannelRuntimeRegistry.ChannelRuntimeState runtime = runtimeByChannel.remove(channel);
         if (runtime == null) {
-            ReactorLoop owner = channelOwner.remove(channel);
+            NativeTcpReactor owner = channelOwner.remove(channel);
             if (owner != null) {
                 owner.cancelKey(channel);
             }
@@ -690,18 +668,9 @@ public final class NativeTcpCarrier implements TransportEngine {
             return;
         }
 
-        ReactorLoop owner = runtime.detachOwner();
+        NativeTcpReactor owner = runtime.detachOwner();
         if (owner != null) {
             owner.cancelKey(channel);
-        }
-
-        Thread clientIngressThread = runtime.detachClientIngressThread();
-        if (clientIngressThread != null) {
-            interruptAndJoin(clientIngressThread);
-        }
-        Thread clientWriterThread = runtime.detachClientWriterThread();
-        if (clientWriterThread != null) {
-            interruptAndJoin(clientWriterThread);
         }
 
         streamByChannel.remove(channel, runtime.stream());
@@ -710,92 +679,6 @@ public final class NativeTcpCarrier implements TransportEngine {
         if (runtime.beginLifecycleCleanup()) {
             activeStreams.decrementAndGet();
             activeConnections.decrementAndGet();
-        }
-    }
-
-    private void requestClientWriteFlush(SocketChannel channel) {
-        ChannelRuntimeRegistry.ChannelRuntimeState runtime = resolveRuntime(channel);
-        if (runtime == null) {
-            return;
-        }
-        Thread writer = runtime.clientWriterThread();
-        if (writer != null) {
-            LockSupport.unpark(writer);
-        }
-    }
-
-    private void startClientIngressPump(ChannelRuntimeRegistry.ChannelRuntimeState runtime) {
-        Thread thread = Thread.ofVirtual()
-                .name("carrier/native-tcp-client-ingress/" + runtime.stream().streamId())
-                .start(() -> runClientIngressLoop(runtime.channel(), runtime.stream()));
-        runtime.bindClientIngressThread(thread);
-    }
-
-    private void startClientWriterPump(ChannelRuntimeRegistry.ChannelRuntimeState runtime) {
-        Thread thread = Thread.ofVirtual()
-                .name("carrier/native-tcp-client-writer/" + runtime.stream().streamId())
-                .start(() -> runClientWriterLoop(runtime.stream()));
-        runtime.bindClientWriterThread(thread);
-    }
-
-    private void runClientIngressLoop(SocketChannel channel, NativeTcpStream stream) {
-        long idleBackoffNanos = CLIENT_TLS_INGRESS_IDLE_BACKOFF_INITIAL_NANOS;
-        while (running.get()) {
-            try {
-                if (stream.isClosed()) {
-                    return;
-                }
-
-                if (stream.usesFdOwnerTls()) {
-                    LoanedBuffer offered = stream.readTlsIngressFromFd();
-                    if (offered != null) {
-                        stream.offerIngress(offered);
-                        idleBackoffNanos = CLIENT_TLS_INGRESS_IDLE_BACKOFF_INITIAL_NANOS;
-                        continue;
-                    }
-                    if (stream.isClosed()) {
-                        return;
-                    }
-                    LockSupport.parkNanos(idleBackoffNanos);
-                    idleBackoffNanos = Math.min(
-                            idleBackoffNanos << 1,
-                            CLIENT_TLS_INGRESS_IDLE_BACKOFF_MAX_NANOS);
-                    continue;
-                }
-
-                readIngress(channel);
-                idleBackoffNanos = CLIENT_TLS_INGRESS_IDLE_BACKOFF_INITIAL_NANOS;
-            } catch (RuntimeException _) {
-                stream.markRemoteClosed();
-                return;
-            }
-        }
-    }
-
-    private void runClientWriterLoop(NativeTcpStream stream) {
-        long writeBackoffNanos = CLIENT_WRITER_BACKOFF_INITIAL_NANOS;
-        while (running.get() && !stream.isClosed()) {
-            try {
-                stream.signalWriteReady();
-                if (stream.hasPendingData()) {
-                    boolean drained = stream.flushPendingWrites();
-                    if (drained) {
-                        writeBackoffNanos = CLIENT_WRITER_BACKOFF_INITIAL_NANOS;
-                        continue;
-                    }
-                    LockSupport.parkNanos(writeBackoffNanos);
-                    writeBackoffNanos = Math.min(writeBackoffNanos << 1, CLIENT_WRITER_BACKOFF_MAX_NANOS);
-                    continue;
-                }
-                writeBackoffNanos = CLIENT_WRITER_BACKOFF_INITIAL_NANOS;
-                LockSupport.park();
-                if (Thread.interrupted() && (!running.get() || stream.isClosed())) {
-                    return;
-                }
-            } catch (RuntimeException _) {
-                stream.close();
-                return;
-            }
         }
     }
 
@@ -813,189 +696,15 @@ public final class NativeTcpCarrier implements TransportEngine {
         communityTlsEngine.bindFileDescriptor(SocketChannelFdAccess.requireFd(channel));
     }
 
-    private void validateServerSocketBootstrapOnce() {
-        if (!ffmSocketBackendArmed || !serverSocketValidationAttempted.compareAndSet(false, true)) {
-            return;
-        }
-        serverSocketValidationSuccessful.set(runServerSocketValidationProbe());
-        if (!serverSocketValidationSuccessful.get()) {
-            LOG.log(System.Logger.Level.DEBUG,
-                    "Core socket seam could not be validated for the server path; continuing on the active NIO path.");
-        }
-    }
-
-    private void validateClientSocketBackendOnce(String host, int port) {
-        if (!ffmSocketBackendArmed || !clientSocketValidationAttempted.compareAndSet(false, true)) {
-            return;
-        }
-        clientSocketValidationSuccessful.set(runClientSocketValidationProbe(host, port));
-        if (!clientSocketValidationSuccessful.get()) {
-            LOG.log(System.Logger.Level.DEBUG, () ->
-                    "Core socket seam could not be validated for the client path " + host + ':' + port
-                            + "; continuing on the active NIO path.");
-        }
-    }
-
-    private SyscallHandles resolvedSocketHandlesForValidation() {
-        if (!ffmSocketBackendArmed) {
-            return null;
-        }
-        SyscallHandles handles = this.socketHandles;
-        return handles != null && handles.supportsPlainSocketIo() ? handles : null;
-    }
-
-    private boolean runServerSocketValidationProbe() {
-        SyscallHandles handles = resolvedSocketHandlesForValidation();
-        return handles != null && validateServerSocketBootstrap(handles);
-    }
-
-    private boolean runClientSocketValidationProbe(String host, int port) {
-        SyscallHandles handles = resolvedSocketHandlesForValidation();
-        return handles != null && validateClientSocketConnect(handles, host, port);
-    }
-
-    private boolean validateServerSocketBootstrap(SyscallHandles handles) {
-        int socketFd = -1;
-        try (LoanedBuffer scratch = allocator.allocateInfrastructure(SOCKADDR_IN_SIZE)) {
-            socketFd = openPosixStreamSocket(handles);
-            MemorySegment sockaddr = scratch.segment().asSlice(0, SOCKADDR_IN_SIZE);
-            writeIpv4Sockaddr(sockaddr,
-                    0,
-                    LOOPBACK_FIRST_OCTET,
-                    LOOPBACK_SECOND_OCTET,
-                    LOOPBACK_THIRD_OCTET,
-                    LOOPBACK_FOURTH_OCTET);
-            return bindSocket(handles, socketFd, sockaddr) == 0
-                    && listenSocket(handles, socketFd) == 0;
-        } catch (RuntimeException _) {
-            LOG.log(System.Logger.Level.DEBUG,
-                    "Core socket server bootstrap probe failed; compatibility fallback remains active.");
-            return false;
-        } finally {
-            closePosixSocketQuietly(handles, socketFd);
-        }
-    }
-
-    private boolean validateClientSocketConnect(SyscallHandles handles, String host, int port) {
-        int socketFd = -1;
-        try (ServerSocketChannel probeListener = ServerSocketChannel.open();
-             LoanedBuffer scratch = allocator.allocateInfrastructure(SOCKADDR_IN_SIZE)) {
-            probeListener.bind(new InetSocketAddress(LOOPBACK_HOST, 0));
-            int probePort = ((InetSocketAddress) probeListener.getLocalAddress()).getPort();
-
-            socketFd = openPosixStreamSocket(handles);
-            MemorySegment sockaddr = scratch.segment().asSlice(0, SOCKADDR_IN_SIZE);
-            writeIpv4Sockaddr(sockaddr,
-                    probePort,
-                    LOOPBACK_FIRST_OCTET,
-                    LOOPBACK_SECOND_OCTET,
-                    LOOPBACK_THIRD_OCTET,
-                    LOOPBACK_FOURTH_OCTET);
-            if (connectSocket(handles, socketFd, sockaddr) != 0) {
-                return false;
-            }
-
-            try (SocketChannel accepted = probeListener.accept()) {
-                return accepted != null;
-            }
-        } catch (IOException | RuntimeException _) {
-            LOG.log(System.Logger.Level.DEBUG, () ->
-                    "Core socket client probe failed for " + host + ':' + port
-                            + "; compatibility fallback remains active.");
-            return false;
-        } finally {
-            closePosixSocketQuietly(handles, socketFd);
-        }
-    }
-
-    private static void writeIpv4Sockaddr(MemorySegment target,
-                                          int port,
-                                          byte firstOctet,
-                                          byte secondOctet,
-                                          byte thirdOctet,
-                                          byte fourthOctet) {
-        target.fill((byte) 0);
-        if (SOCKADDR_INCLUDES_LENGTH) {
-            target.set(ValueLayout.JAVA_BYTE, 0, (byte) SOCKADDR_IN_SIZE);
-            target.set(ValueLayout.JAVA_BYTE, 1, (byte) AF_INET);
-        } else {
-            target.set(ValueLayout.JAVA_SHORT, 0, (short) AF_INET);
-        }
-        target.set(ValueLayout.JAVA_BYTE, 2, (byte) ((port >>> 8) & 0xFF));
-        target.set(ValueLayout.JAVA_BYTE, 3, (byte) (port & 0xFF));
-        target.set(ValueLayout.JAVA_BYTE, 4, firstOctet);
-        target.set(ValueLayout.JAVA_BYTE, 5, secondOctet);
-        target.set(ValueLayout.JAVA_BYTE, 6, thirdOctet);
-        target.set(ValueLayout.JAVA_BYTE, 7, fourthOctet);
-    }
-
-    private static boolean usesBsdSockaddrLayout() {
-        String osName = System.getProperty("os.name", "").toLowerCase(Locale.ROOT);
-        return osName.contains("mac")
-                || osName.contains("darwin")
-                || osName.contains("bsd");
-    }
-
-    private static int openPosixStreamSocket(SyscallHandles handles) {
-        try {
-            return (int) handles.socket().invokeExact(AF_INET, SOCK_STREAM, DEFAULT_IP_PROTOCOL);
-        } catch (Throwable ex) {
-            throw new IllegalStateException("Core socket() probe failed", ex);
-        }
-    }
-
-    private static int bindSocket(SyscallHandles handles, int socketFd, MemorySegment sockaddr) {
-        try {
-            return (int) handles.bind().invokeExact(socketFd, sockaddr, SOCKADDR_IN_SIZE);
-        } catch (Throwable ex) {
-            throw new IllegalStateException("Core bind() probe failed", ex);
-        }
-    }
-
-    private static int connectSocket(SyscallHandles handles, int socketFd, MemorySegment sockaddr) {
-        try {
-            return (int) handles.connect().invokeExact(socketFd, sockaddr, SOCKADDR_IN_SIZE);
-        } catch (Throwable ex) {
-            throw new IllegalStateException("Core connect() probe failed", ex);
-        }
-    }
-
-    private static int listenSocket(SyscallHandles handles, int socketFd) {
-        try {
-            return (int) handles.listen().invokeExact(socketFd, 1);
-        } catch (Throwable ex) {
-            throw new IllegalStateException("Core listen() probe failed", ex);
-        }
-    }
-
-    private static void closePosixSocketQuietly(SyscallHandles handles, int socketFd) {
-        if (socketFd < 0) {
-            return;
-        }
-        try {
-            int _ = (int) handles.close().invokeExact(socketFd);
-        } catch (Throwable _) {
-            // best effort cleanup on the validation probe path
-        }
-    }
-
     private void closeSelectorAndChannels() {
         for (ChannelRuntimeRegistry.ChannelRuntimeState runtime : new ArrayList<>(runtimeByChannel.values())) {
             runtime.stream().close();
-            Thread ingressThread = runtime.detachClientIngressThread();
-            if (ingressThread != null) {
-                ingressThread.interrupt();
-            }
-            Thread writerThread = runtime.detachClientWriterThread();
-            if (writerThread != null) {
-                writerThread.interrupt();
-            }
         }
         runtimeByChannel.clear();
         streamByChannel.clear();
         channelOwner.clear();
 
-        for (ReactorLoop reactor : reactors) {
+        for (NativeTcpReactor reactor : reactors) {
             reactor.closeSelector();
         }
         reactors.clear();
@@ -1016,366 +725,4 @@ public final class NativeTcpCarrier implements TransportEngine {
         }
     }
 
-    private static void interruptAndJoin(Thread thread) {
-        thread.interrupt();
-        if (Objects.equals(thread, Thread.currentThread())) {
-            return;
-        }
-        try {
-            thread.join(200L);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-    }
-
-    private enum SocketBackendMode {
-        AUTO(SOCKET_BACKEND_AUTO),
-        NIO(SOCKET_BACKEND_NIO),
-        POSIX_HYBRID(SOCKET_BACKEND_POSIX_HYBRID);
-
-        private final String configValue;
-
-        SocketBackendMode(String configValue) {
-            this.configValue = configValue;
-        }
-
-        private String configValue() {
-            return configValue;
-        }
-
-        private static SocketBackendMode resolveConfiguredMode() {
-            String configured = System.getProperty(SOCKET_BACKEND_PROPERTY);
-            if (configured == null || configured.isBlank()) {
-                configured = System.getProperty(SOCKET_BACKEND_ENV_ALIAS);
-            }
-            if (configured == null || configured.isBlank()) {
-                configured = System.getenv(SOCKET_BACKEND_ENV);
-            }
-            if (configured == null || configured.isBlank()) {
-                configured = System.getenv(SOCKET_BACKEND_ENV_ALIAS);
-            }
-            if (configured == null || configured.isBlank()) {
-                return AUTO;
-            }
-            return switch (configured.trim().toLowerCase(Locale.ROOT)) {
-                case SOCKET_BACKEND_AUTO -> AUTO;
-                case SOCKET_BACKEND_NIO -> NIO;
-                case SOCKET_BACKEND_POSIX_HYBRID -> POSIX_HYBRID;
-                default -> {
-                    String invalidMode = configured;
-                    LOG.log(System.Logger.Level.WARNING, () ->
-                            "Unknown Community socket backend mode '" + invalidMode + "'; defaulting to auto.");
-                    yield AUTO;
-                }
-            };
-        }
-    }
-
-    private record SocketBackendSelection(SocketBackendMode requestedMode,
-                                          Arena socketBackendArena,
-                                          SyscallHandles socketHandles,
-                                          boolean ffmSocketBackendArmed,
-                                          String detail) {
-
-        private static SocketBackendSelection resolve() {
-            SocketBackendMode configuredMode = SocketBackendMode.resolveConfiguredMode();
-            if (configuredMode == SocketBackendMode.NIO) {
-                return new SocketBackendSelection(
-                        configuredMode,
-                        null,
-                        null,
-                        false,
-                        "NIO backend pinned explicitly; Core syscall load skipped.");
-            }
-            if (IS_WINDOWS_RUNTIME) {
-                String detail = configuredMode == SocketBackendMode.POSIX_HYBRID
-                        ? resolveRequestedFallbackDetail(true, true)
-                        : resolveAutoFallbackDetail(true, true);
-                return new SocketBackendSelection(configuredMode, null, null, false, detail);
-            }
-
-            //CHECKSTYLE:OFF
-            // Direct shared-arena allocation: the Community carrier is the sole owner of
-            // the socket backend seam lifetime. Shared scope is required because resolved
-            // syscall handles are used across transport threads, and carrier.close()
-            // deterministically closes this arena.
-            Arena arena = Arena.ofShared();
-            //CHECKSTYLE:ON
-            SyscallHandles handles = null;
-            try {
-                handles = CoreSyscallLoader.load(arena);
-            } catch (IllegalCallerException | IllegalStateException | UnsupportedOperationException ex) {
-                LOG.log(System.Logger.Level.DEBUG,
-                        "[NativeTcpCarrier] Community-owned Core socket load unavailable; continuing on NIO fallback.",
-                        ex);
-            }
-
-            if (handles == null) {
-                closeQuietly(arena);
-                String detail;
-                if (configuredMode == SocketBackendMode.POSIX_HYBRID) {
-                    detail = "Core socket seam was requested explicitly but is unavailable; "
-                            + ACTIVE_NIO_FALLBACK_DETAIL;
-                } else {
-                    detail = "Core socket seam probe unavailable on this platform; "
-                            + ACTIVE_NIO_FALLBACK_DETAIL;
-                }
-                return new SocketBackendSelection(configuredMode, null, null, false, detail);
-            }
-
-            boolean plainSocketIoAvailable = handles.supportsPlainSocketIo();
-            boolean fdAccessAvailable = SocketChannelFdAccess.isRuntimeFdAccessAvailable();
-            boolean winsockModel = handles.hasIoctlsocket();
-            boolean seamArmed = plainSocketIoAvailable && fdAccessAvailable && !winsockModel;
-            String detail = resolveDetail(configuredMode, seamArmed, plainSocketIoAvailable, winsockModel);
-            return new SocketBackendSelection(configuredMode, arena, handles, seamArmed, detail);
-        }
-
-        private static String resolveDetail(SocketBackendMode configuredMode,
-                                            boolean seamArmed,
-                                            boolean plainSocketIoAvailable,
-                                            boolean winsockModel) {
-            if (seamArmed) {
-                return "Core socket seam armed for plain TCP traffic; "
-                        + "selector ownership and NIO fallback remain intact.";
-            }
-            if (configuredMode == SocketBackendMode.POSIX_HYBRID) {
-                return resolveRequestedFallbackDetail(plainSocketIoAvailable, winsockModel);
-            }
-            return resolveAutoFallbackDetail(plainSocketIoAvailable, winsockModel);
-        }
-
-        private static String resolveRequestedFallbackDetail(boolean plainSocketIoAvailable,
-                                                             boolean winsockModel) {
-            if (!plainSocketIoAvailable) {
-                return "Core socket seam was requested explicitly but is unavailable; "
-                        + ACTIVE_NIO_FALLBACK_DETAIL;
-            }
-            if (winsockModel) {
-                return "Core socket seam was requested explicitly but this platform uses the Winsock model; "
-                        + ACTIVE_NIO_FALLBACK_DETAIL;
-            }
-            return "Core socket seam was requested explicitly but "
-                    + "SocketChannel FD access is blocked by runtime openness; "
-                    + "add the required --add-opens flags or "
-                    + ACTIVE_NIO_FALLBACK_DETAIL;
-        }
-
-        private static String resolveAutoFallbackDetail(boolean plainSocketIoAvailable,
-                                                        boolean winsockModel) {
-            if (!plainSocketIoAvailable) {
-                return "Core socket seam resolved without plain socket syscall support; "
-                        + ACTIVE_NIO_FALLBACK_DETAIL;
-            }
-            if (winsockModel) {
-                return "Core socket seam resolved on a Winsock platform; "
-                        + ACTIVE_NIO_FALLBACK_DETAIL;
-            }
-            return "Core socket seam resolved but SocketChannel FD access "
-                    + "is blocked by runtime openness; "
-                    + "add the required --add-opens flags or "
-                    + ACTIVE_NIO_FALLBACK_DETAIL;
-        }
-
-    }
-
-    private enum ReactorRequestType {
-        REGISTER,
-        ENABLE_WRITE,
-        CANCEL
-    }
-
-    private record ReactorRequest(ReactorRequestType type, SocketChannel channel) {
-    }
-
-    // CommentDefaultAccessModifier: package-private loop enables same-package transport diagnostics/tests.
-    @SuppressWarnings("PMD.CommentDefaultAccessModifier")
-    final class ReactorLoop {
-
-        private final int index;
-        private final Selector selector;
-        // PERF-063: MpscUnboundedArrayQueue replaces ConcurrentLinkedQueue. Multiple producer
-        // threads (any caller of enqueueRegistration / enqueueWriteInterest / cancelKey) feed a
-        // single consumer (the reactor thread in runLoop). MPSC semantics match exactly; chunked
-        // allocation (size 128) avoids per-element node alloc churn under burst arrivals; offer()
-        // on the unbounded variant always returns true so no backpressure handling is required at
-        // the call site (parity with the existing pattern in NativeTcpStream's outboundQueue).
-        private final Queue<ReactorRequest> pendingRequests = new MpscUnboundedArrayQueue<>(128);
-        private final Set<SocketChannel> pendingWriteInterest = ConcurrentHashMap.newKeySet();
-        private final AtomicBoolean wakeupPending = new AtomicBoolean(false);
-
-        private volatile Thread thread;
-
-        private ReactorLoop(int index, Selector selector) {
-            this.index = index;
-            this.selector = selector;
-        }
-
-        private void start() {
-            this.thread = Thread.ofPlatform()
-                    .name("carrier/native-tcp/reactor/" + index)
-                    .start(this::runLoop);
-        }
-
-        private void enqueueRegistration(SocketChannel channel) {
-            enqueueRequest(new ReactorRequest(ReactorRequestType.REGISTER, channel));
-        }
-
-        private void enqueueWriteInterest(SocketChannel channel) {
-            enqueueRequest(new ReactorRequest(ReactorRequestType.ENABLE_WRITE, channel));
-        }
-
-        private void cancelKey(SocketChannel channel) {
-            enqueueRequest(new ReactorRequest(ReactorRequestType.CANCEL, channel));
-        }
-
-        private void wakeup() {
-            signalSelector();
-        }
-
-        private void enqueueRequest(ReactorRequest request) {
-            pendingRequests.offer(request);
-            signalSelector();
-        }
-
-        private void signalSelector() {
-            if (wakeupPending.compareAndSet(false, true)) {
-                selector.wakeup();
-            }
-        }
-
-        private void join(long timeoutMs) {
-            Thread localThread = thread;
-            if (localThread == null) {
-                return;
-            }
-            try {
-                localThread.join(timeoutMs);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
-        }
-
-        private void closeSelector() {
-            closeQuietly(selector);
-        }
-
-        private void runLoop() {
-            while (running.get()) {
-                try {
-                    boolean drainedRequests = drainPendingRequests();
-                    if (!running.get()) {
-                        return;
-                    }
-
-                    if (drainedRequests) {
-                        selector.selectNow();
-                    } else {
-                        selector.select(100L);
-                    }
-
-                    drainPendingRequests();
-                    Iterator<SelectionKey> iterator = selector.selectedKeys().iterator();
-                    while (iterator.hasNext()) {
-                        SelectionKey key = iterator.next();
-                        iterator.remove();
-
-                        try {
-                            if (!key.isValid()) {
-                                continue;
-                            }
-                            if (key.isReadable()) {
-                                readIngress((SocketChannel) key.channel());
-                            }
-                            if (key.isWritable()) {
-                                flushStream((SocketChannel) key.channel(), key);
-                            }
-                        } catch (CancelledKeyException _) {
-                            // channel closed concurrently by VT handler path
-                        } catch (RuntimeException _) {
-                            closeKeyStream(key);
-                        }
-                    }
-                } catch (IOException e) {
-                    if (running.get()) {
-                        handleAsyncFailure("reactor/" + index, e);
-                    }
-                    return;
-                }
-            }
-        }
-
-        private boolean drainPendingRequests() {
-            boolean drainedAny = false;
-            ReactorRequest request = pendingRequests.poll();
-            while (request != null) {
-                drainedAny = true;
-                processPendingRequest(request);
-                request = pendingRequests.poll();
-            }
-
-            wakeupPending.set(false);
-            if (!pendingRequests.isEmpty()) {
-                signalSelector();
-                return true;
-            }
-            return drainedAny;
-        }
-
-        private void processPendingRequest(ReactorRequest request) {
-            SocketChannel channel = request.channel();
-            switch (request.type()) {
-                case REGISTER -> registerChannel(channel);
-                case ENABLE_WRITE -> enableWriteInterest(channel);
-                case CANCEL -> cancelSelection(channel);
-            }
-        }
-
-        private void registerChannel(SocketChannel channel) {
-            try {
-                if (channel.isOpen()) {
-                    NativeTcpStream stream = resolveStream(channel);
-                    boolean enableWriteOnRegister = pendingWriteInterest.remove(channel)
-                            || (stream != null && stream.hasPendingData());
-                    int interestOps = enableWriteOnRegister
-                            ? SelectionKey.OP_READ | SelectionKey.OP_WRITE
-                            : SelectionKey.OP_READ;
-                    channel.register(selector, interestOps);
-                    if (stream != null) {
-                        stream.markRegistrationReady();
-                    }
-                } else {
-                    pendingWriteInterest.remove(channel);
-                }
-            } catch (IOException e) {
-                pendingWriteInterest.remove(channel);
-                NativeTcpStream stream = streamByChannel.get(channel);
-                if (stream != null) {
-                    stream.close();
-                }
-            }
-        }
-
-        private void enableWriteInterest(SocketChannel channel) {
-            SelectionKey key = channel.keyFor(selector);
-            if (key == null || !key.isValid()) {
-                pendingWriteInterest.add(channel);
-                return;
-            }
-            pendingWriteInterest.remove(channel);
-            try {
-                key.interestOps(key.interestOps() | SelectionKey.OP_WRITE | SelectionKey.OP_READ);
-            } catch (RuntimeException _) {
-                pendingWriteInterest.add(channel);
-            }
-        }
-
-        private void cancelSelection(SocketChannel channel) {
-            pendingWriteInterest.remove(channel);
-            SelectionKey key = channel.keyFor(selector);
-            if (key != null) {
-                key.cancel();
-            }
-        }
-    }
 }
